# waitlock

./: .gitignore  CHANGELOG.md  INVESTIGATION_SUMMARY.md  Makefile.in  NEXT_STEPS.md  README.md  TEST_RESULTS.md  comprehensive_test_fix.sh  config.h.in  configure  configure.ac  debug_semaphore_exec_standalone.c  phase_1_completion_summary.md  simple_timeout_test.sh  test_coverage_documentation.md  test_timeout_functionality.sh
debugging/: debug_failing_tests.c  debug_semaphore_exec.c  debug_semaphore_exec_standalone.c  example_process_coordinator_usage.c  test_global_state_issue.c
doc/: waitlock.1
spec/: design-and-implementation.md  failing-tests-analysis-blueprint.md  fix_test_cleanup.sh  foreground-best-practices.md  implementation.md  no-contention-debug-blueprint.md  no-contention-hang-fix-summary.md  test-coverage-analysis.md  test-improvement-plan-2025.md  test-plan.md  test_ui_gaps_fixed.sh  test_ui_options.sh  testing-implementation-plan.md  testing-strategy.md  waitlock-blueprint.md
src/: Makefile.in  debug_utils.c  debug_utils.h  test_integration  waitlock.c  waitlock.h
src/checksum/: checksum.c  checksum.h
src/core/: core.c  core.h
src/lock/: lock.c  lock.h
src/pipe_coordinator/: pipe_coordinator.c  pipe_coordinator.h
src/process/: process.c  process.h
src/process_coordinator/: process_coordinator.c  process_coordinator.h
src/signal/: signal.c  signal.h
src/test/: debug_failing_tests.c  debug_output_test.sh  debug_process_coordinator.c  debug_semaphore_exec.sh  test.c  test.h  test_checksum.c  test_core.c  test_framework.c  test_framework.h  test_global_state_issue.c  test_integration.c  test_lock.c  test_process.c  test_process_coordinator.c  test_signal.c  unit_tests.c
summary/: README.md  project_handoff_summary.md  test_coverage_progress_report.md  ui_options_coverage_analysis.md
test/: comprehensive_test.sh  core_functionality_test.sh  environment_comprehensive_test.sh  expanded_test.sh  external_binary_test.sh  foreground_coordination_test.sh  hang_fix_test.sh  no_contention_fix_test.sh  performance_test.sh  regression_test.sh  script_coordination_test.sh  simple_coordination_test.sh  simple_test.sh  stress_test.sh  syslog_comprehensive_test.sh  test_coordination.sh  test_ui_comprehensive.sh  test_ui_gaps.sh
